Updated some figures and added some query examples that are used for the LDK2023 paper submission.

--- a/notebooks/MWE_Pronunciation_LDK2023.ipynb
+++ b/notebooks/MWE_Pronunciation_LDK2023.ipynb
@@ -258,6 +258,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "p          4656\ne          4977\nt          4656\npr         7366\nmweOrLE       1\ndtype: int64"
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mwe_with_pron.nunique()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "p     210845\ne     214243\npr         0\ndtype: int64"
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mwe_without_pron[['p', 'e', 'pr']].nunique()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "outputs": [
     {
@@ -346,19 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 166,
    "outputs": [
     {
      "data": {
-      "text/plain": "75082"
+      "text/plain": "p           75082\ne          107327\nt           75086\npr         111934\nmweOrLE         1\ndtype: int64"
      },
-     "execution_count": 9,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "entries_with_pron['p'].nunique()"
+    "entries_with_pron.nunique()"
    ],
    "metadata": {
     "collapsed": false
@@ -716,6 +756,27 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 160,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                           prons\ne                                                               \nhttp://kaiko.getalp.org/dbnary/eng/lead__Adject...  /lid/,/liːd/\nhttp://kaiko.getalp.org/dbnary/eng/lead__Noun__1           /lɛd/\nhttp://kaiko.getalp.org/dbnary/eng/lead__Noun__2    /lid/,/liːd/\nhttp://kaiko.getalp.org/dbnary/eng/lead__Verb__1           /lɛd/\nhttp://kaiko.getalp.org/dbnary/eng/lead__Verb__2    /lid/,/liːd/\nhttp://kaiko.getalp.org/dbnary/eng/lead__Verb__3    /lid/,/liːd/",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>prons</th>\n    </tr>\n    <tr>\n      <th>e</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Adjective__1</th>\n      <td>/lid/,/liːd/</td>\n    </tr>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Noun__1</th>\n      <td>/lɛd/</td>\n    </tr>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Noun__2</th>\n      <td>/lid/,/liːd/</td>\n    </tr>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Verb__1</th>\n      <td>/lɛd/</td>\n    </tr>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Verb__2</th>\n      <td>/lid/,/liːd/</td>\n    </tr>\n    <tr>\n      <th>http://kaiko.getalp.org/dbnary/eng/lead__Verb__3</th>\n      <td>/lid/,/liːd/</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_entries_and_pronunciations('lead')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "#### Trying to get all heteronyms in one giant SPARQL query"
@@ -844,6 +905,48 @@
    ],
    "source": [
     "heteronyms.nunique()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                 p                      prons  \\\n19571  http://kaiko.getalp.org/dbnary/eng/darkling             /ˈdɑː(ɹ)kəlɪŋ/   \n43424   http://kaiko.getalp.org/dbnary/eng/stonish      /ˈstoʊnɪʃ/,/ˈstəʊnɪʃ/   \n64704       http://kaiko.getalp.org/dbnary/eng/ake                   /ɑːˈkeɪ/   \n13266  http://kaiko.getalp.org/dbnary/eng/footling                 /ˈfʊt.lɪŋ/   \n24039   http://kaiko.getalp.org/dbnary/eng/subject  /səbˈd͡ʒɛkt/,/sʌbˈd͡ʒɛkt/   \n68588     http://kaiko.getalp.org/dbnary/eng/tower                /ˈtəʊ.ə(ɹ)/   \n44601      http://kaiko.getalp.org/dbnary/eng/wang                      /wæŋ/   \n66084     http://kaiko.getalp.org/dbnary/eng/mater                   /ˈmeɪtɚ/   \n44837        http://kaiko.getalp.org/dbnary/eng/ay                      /ˈeɪ/   \n43667   http://kaiko.getalp.org/dbnary/eng/concord                 /kənˈkɔɹd/   \n\n                                                 entries  Counts  \n19571  http://kaiko.getalp.org/dbnary/eng/darkling__A...       2  \n43424  http://kaiko.getalp.org/dbnary/eng/stonish__Ad...       2  \n64704  http://kaiko.getalp.org/dbnary/eng/ake__Adverb__1       2  \n13266  http://kaiko.getalp.org/dbnary/eng/footling__N...       2  \n24039  http://kaiko.getalp.org/dbnary/eng/subject__Ve...       2  \n68588  http://kaiko.getalp.org/dbnary/eng/tower__Noun__2       2  \n44601  http://kaiko.getalp.org/dbnary/eng/wang__Noun_...       2  \n66084  http://kaiko.getalp.org/dbnary/eng/mater__Noun__3       2  \n44837  http://kaiko.getalp.org/dbnary/eng/ay__Adverb_...       4  \n43667  http://kaiko.getalp.org/dbnary/eng/concord__Ve...       3  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>p</th>\n      <th>prons</th>\n      <th>entries</th>\n      <th>Counts</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19571</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/darkling</td>\n      <td>/ˈdɑː(ɹ)kəlɪŋ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/darkling__A...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>43424</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/stonish</td>\n      <td>/ˈstoʊnɪʃ/,/ˈstəʊnɪʃ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/stonish__Ad...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>64704</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/ake</td>\n      <td>/ɑːˈkeɪ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/ake__Adverb__1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>13266</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/footling</td>\n      <td>/ˈfʊt.lɪŋ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/footling__N...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>24039</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/subject</td>\n      <td>/səbˈd͡ʒɛkt/,/sʌbˈd͡ʒɛkt/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/subject__Ve...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>68588</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/tower</td>\n      <td>/ˈtəʊ.ə(ɹ)/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/tower__Noun__2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>44601</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/wang</td>\n      <td>/wæŋ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/wang__Noun_...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>66084</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/mater</td>\n      <td>/ˈmeɪtɚ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/mater__Noun__3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>44837</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/ay</td>\n      <td>/ˈeɪ/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/ay__Adverb_...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>43667</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/concord</td>\n      <td>/kənˈkɔɹd/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/concord__Ve...</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heteronyms.sample(10)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                             p         prons  \\\n23811  http://kaiko.getalp.org/dbnary/eng/lead  /lid/,/liːd/   \n53309  http://kaiko.getalp.org/dbnary/eng/lead         /lɛd/   \n\n                                                 entries  Counts  \n23811  http://kaiko.getalp.org/dbnary/eng/lead__Verb_...       2  \n53309  http://kaiko.getalp.org/dbnary/eng/lead__Verb_...       2  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>p</th>\n      <th>prons</th>\n      <th>entries</th>\n      <th>Counts</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>23811</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/lead</td>\n      <td>/lid/,/liːd/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/lead__Verb_...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>53309</th>\n      <td>http://kaiko.getalp.org/dbnary/eng/lead</td>\n      <td>/lɛd/</td>\n      <td>http://kaiko.getalp.org/dbnary/eng/lead__Verb_...</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heteronyms.query(\"p == 'http://kaiko.getalp.org/dbnary/eng/lead'\")"
    ],
    "metadata": {
     "collapsed": false
@@ -1234,13 +1337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 173,
    "outputs": [],
    "source": [
     "# aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['precision'] = zip(*aggregated_mwe_with_pron[['pr','computed']].applymap(lambda pair: print(pair)))\n",
-    "ipa_normalizer = str.maketrans('', '', 'ˈˌːˑ.ǀǁ‿ ' )\n",
+    "ipa_normalizer = str.maketrans('', '', 'ˈˌːˑ.ǀǁ‿' )\n",
+    "ipa_normalizer_no_spaces = str.maketrans('', '', 'ˈˌːˑ.ǀǁ‿ ' )\n",
+    "\n",
     "def no_suprasegmentals(pron: str) -> str:\n",
     " return pron.translate(ipa_normalizer)\n",
+    "\n",
+    "def no_space(pron: str) -> str:\n",
+    " return pron.translate(str.maketrans('', '', ' ' ))\n",
+    "\n",
+    "def no_suprasegmentals_no_spaces(pron: str) -> str:\n",
+    " return pron.translate(ipa_normalizer_no_spaces)\n",
     "\n",
     "def precision_recall(line, normalizer=None):\n",
     "    gold = str.split(line['pr'], sep=',')\n",
@@ -1262,8 +1373,17 @@
     "def precision_recall_no_suprasegmentals(line):\n",
     "    return precision_recall(line, normalizer=no_suprasegmentals)\n",
     "\n",
+    "def precision_recall_no_suprasegmentals_no_spaces(line):\n",
+    "    return precision_recall(line, normalizer=no_suprasegmentals_no_spaces)\n",
+    "\n",
+    "def precision_recall_no_space(line):\n",
+    "    return precision_recall(line, normalizer=no_space)\n",
+    "\n",
     "#aggregated_mwe_with_pron.sample(10)[['pr','computed']].apply(precision_recall, axis=1)\n",
-    "aggregated_mwe_with_pron['precision'], aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['f1'] = zip(*aggregated_mwe_with_pron[['pr','computed']].apply(precision_recall_no_suprasegmentals, axis=1))"
+    "aggregated_mwe_with_pron['precision'], aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['f1'] = zip(*aggregated_mwe_with_pron[['pr','computed']].apply(precision_recall_no_suprasegmentals, axis=1))\n",
+    "#aggregated_mwe_with_pron['precision'], aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['f1'] = zip(*aggregated_mwe_with_pron[['pr','computed']].apply(precision_recall_no_suprasegmentals_no_spaces, axis=1))\n",
+    "#aggregated_mwe_with_pron['precision'], aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['f1'] = zip(*aggregated_mwe_with_pron[['pr','computed']].apply(precision_recall_no_space, axis=1))\n",
+    "#aggregated_mwe_with_pron['precision'], aggregated_mwe_with_pron['recall'], aggregated_mwe_with_pron['f1'] = zip(*aggregated_mwe_with_pron[['pr','computed']].apply(precision_recall, axis=1))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1271,15 +1391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 174,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1:        all:  0.1766825076287711  / Combinations:  0.3896924625335098  / Heteronymy:  0.29385251090634856\n",
-      "Precision: all:  0.15615959534302604  / Combinations:  0.34578628218254814  / Heteronymy:  0.236780753968254\n",
-      "Recall:    all:  0.2748492270794863  / Combinations:  0.5994481187536743  / Heteronymy:  0.5712239583333334\n"
+      "F1:        all:  0.14956708102049934  / Combinations:  0.3324374651970818  / Heteronymy:  0.20570654229162993\n",
+      "Precision: all:  0.13182251126862948  / Combinations:  0.2937373620722372  / Heteronymy:  0.16881200396825397\n",
+      "Recall:    all:  0.22923105013219539  / Combinations:  0.5045214212228101  / Heteronymy:  0.3993489583333333\n"
      ]
     }
    ],
@@ -1312,14 +1432,20 @@
    "source": [
     "Here, the brute precision/recall/f1 is :\n",
     "\n",
-    "F1:        all:  0.05509493769387029  / Combinations:  0.1269479189362928\n",
-    "Precision: all:  0.05086741471084449  / Combinations:  0.1172070013962375\n",
-    "Recall:    all:  0.0751624137700087  / Combinations:  0.17318672839506172\n",
+    "F1:        all:  0.05607510458121018  / Combinations:  0.1269479189362928  / Heteronymy:  0.038111645299145305\n",
+    "Precision: all:  0.0516666467337052  / Combinations:  0.1172070013962375  / Heteronymy:  0.03107638888888889\n",
+    "Recall:    all:  0.07717165628558033  / Combinations:  0.17318672839506172  / Heteronymy:  0.078125\n",
+    "\n",
+    "When removing SPACES :\n",
+    "\n",
+    "F1:        all:  0.05704945673096919  / Combinations:  0.1285977505861244  / Heteronymy:  0.048156288156288155\n",
+    "Precision: all:  0.05246587875656591  / Combinations:  0.11862418246619637  / Heteronymy:  0.038237847222222225\n",
+    "Recall:    all:  0.0789799745495948  / Combinations:  0.17619598765432098  / Heteronymy:  0.09765625\n",
     "\n",
     "When removing the suprasegmentals markers in the gold and computed pronunciation, we get :\n",
-    "F1:        all:  0.14427665759005356  / Combinations:  0.3324374651970818\n",
-    "Precision: all:  0.12748095279807764  / Combinations:  0.2937373620722372\n",
-    "Recall:    all:  0.21896047214009842  / Combinations:  0.5045214212228101\n",
+    "F1:        all:  0.14956708102049934  / Combinations:  0.3324374651970818  / Heteronymy:  0.20570654229162993\n",
+    "Precision: all:  0.13182251126862948  / Combinations:  0.2937373620722372  / Heteronymy:  0.16881200396825397\n",
+    "Recall:    all:  0.22923105013219539  / Combinations:  0.5045214212228101  / Heteronymy:  0.3993489583333333\n",
     "\n",
     "When removing the suprasegmentals markers AND SPACES in the gold and computed pronunciation, we get :\n",
     "F1:        all:  0.1766825076287711  / Combinations:  0.3896924625335098  / Heteronymy:  0.29385251090634856\n",
